--- a/_config.yml
+++ b/_config.yml
@@ -16,14 +16,14 @@ minimal_mistakes_skin    : "neon" # "air", "aqua", "contrast", "dark", "dirt", "
 
 # Site Settings
 locale                   : "en-US"
-title                    : "재우의 개발공부"
+title                    : "jaeg00l.git.io"
 title_separator          : "-"
 subtitle                 : # site tagline that appears below site title in masthead
-name                     : "Kim Jae woo"
+name                     : "Kim JaeU"
 description              : "개인 블로그"
 url                      : "https://jaeg00l.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
-repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
+repository               : "jaeg00l/jaeg00l.github.io"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
 logo                     : # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
 masthead_title           : # overrides the website title displayed in the masthead, use " " for no title
@@ -104,7 +104,7 @@ analytics:
 
 # Site Author
 author:
-  name             : "Kim Jae Woo"
+  name             : "Kim JaeU"
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
   bio              : "머지는 합병입니다"
   location         : "South Korea, Asia"
