--- a/_config.yml
+++ b/_config.yml
@@ -105,7 +105,7 @@ analytics:
 # Site Author
 author:
   name             : "Kim JaeU"
-  avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
+  avatar           : /assets/images/profile.PNG"
   bio              : "머지는 합병입니다"
   location         : "South Korea, Asia"
   email            : "jw077023@gmail.com"
