--- a/_config.yml
+++ b/_config.yml
@@ -27,8 +27,8 @@ repository               : "jaeg00l/jaeg00l.github.io"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
 logo                     : # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
 masthead_title           : # overrides the website title displayed in the masthead, use " " for no title
-breadcrumbs              : true # true, false (default)
-words_per_minute         : 150
+breadcrumbs              : # true, false (default)
+words_per_minute         : 200
 comments:
   provider               : # false (default), "disqus", "discourse", "facebook", "staticman", "staticman_v2", "utterances", "giscus", "custom"
   disqus:
@@ -105,7 +105,7 @@ analytics:
 # Site Author
 author:
   name             : "Kim JaeWoo"
-  avatar           : /assets/images/bio-photo.jpg"
+  avatar           : "me.jpg"
   bio              : "머지는 합병입니다"
   location         : "South Korea, Asia"
   email            : "jw077023@gmail.com"
