네이버 검색엔진 등록

--- a/_config.yml
+++ b/_config.yml
@@ -75,7 +75,7 @@ google:
 # SEO Related
 google_site_verification :
 bing_site_verification   :
-naver_site_verification  :
+naver_site_verification  : "77fa39f743fefbf21a99df5b0ce6596443f82d51"
 yandex_site_verification :
 baidu_site_verification  :
 
