--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,6 +4,26 @@ main:
     url: /categories/
   - title: "태그"
     url: /tags/
+  - title: "검색"
+    url: /search/
+  # - title: "연도별"
+  #   url: /year-archive/
+
+docs:
+  - title: "대목차1"
+    children:
+      - title: "카테고리"
+        url: /categories/
+      - title: "태그"
+        url: /tags/
+
+  - title: "대목차2"
+    children:
+      - title: "카테고리"
+        url: /categories/
+      - title: "태그"
+        url: /tags/
+
   # - title: "About"
   #   url: https://mmistakes.github.io/minimal-mistakes/about/
   # - title: "Sample Posts"
