fabicon, subcategory, 참고 게시물 개수 수정

--- a/_config.yml
+++ b/_config.yml
@@ -24,8 +24,8 @@ description              : "개인 블로그입니다."
 url                      : "https://jaeg00l.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : "jaeg00l/jaeg00l.github.io"
-teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
-logo                     : # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
+teaser                   : /assets/images/logo.png
+logo                     : /assets/images/logo.png 
 masthead_title           : # overrides the website title displayed in the masthead, use " " for no title
 breadcrumbs              : true # true, false (default)
 words_per_minute         : 200
@@ -106,7 +106,7 @@ analytics:
 author:
   name             : "Kim Jaewoo"
   avatar           : "/assets/images/me3.png"
-  bio              : "뭐지.. 합병.."
+  bio              : "머지.. 합병.."
   location         : "South Korea"
   email            : "jw077023@gmail.com"
   links:
