--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,5 +1,20 @@
 # main links
 main:
+  - title: "C++"
+    sublinks:
+      - title: "자료구조"
+        url: /categories/
+      - title: "알고리즘"
+        url: /categories/
+      - title: "BOJ"
+        url: /categories/
+  
+  - title: "백엔드"
+    sublinks:
+      - title: "1"
+      - title: "2"
+      - title: "3"
+
   - title: "카테고리"
     url: /categories/
   - title: "태그"
