--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,13 +1,13 @@
 # main links
 main:
-  - title: "C++"
+  - title: "알고리즘"
     sublinks:
       - title: "자료구조"
-        url: /categories/
-      - title: "알고리즘"
-        url: /categories/
-      - title: "BOJ"
-        url: /categories/
+        url: /categories/#algorithm-data-structure
+      - title: "이론"
+        url: /categories/#algorithm-theory
+      - title: "문제풀이"
+        url: /categories/#algorithm-boj
   
   - title: "백엔드"
     sublinks:
