--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,11 +3,11 @@ main:
   - title: "알고리즘"
     sublinks:
       - title: "자료구조"
-        url: /categories/#algorithm-data-structure
+        url: /categories/#data-structure
       - title: "이론"
-        url: /categories/#algorithm-theory
+        url: /categories/#algorithm
       - title: "문제풀이"
-        url: /categories/#algorithm-boj
+        url: /categories/#boj
   
   - title: "백엔드"
     sublinks:
