--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -20,7 +20,7 @@ main:
   - title: "태그"
     url: /tags/
   - title: "검색"
-    url: /search/
+    url: /search-grid/
   # - title: "연도별"
   #   url: /year-archive/
 
