--- a/_data/ui-text.yml
+++ b/_data/ui-text.yml
@@ -599,8 +599,8 @@ ko: &DEFAULT_KO
   skip_content               :
   skip_footer                :
   page                       : "페이지"
-  pagination_previous        : "이전"
-  pagination_next            : "다음"
+  pagination_previous        : "이전 포스팅"
+  pagination_next            : "다음 포스팅"
   breadcrumb_home_label      : "Home"
   breadcrumb_separator       : "/"
   menu_label                 : "토글 메뉴"
@@ -618,11 +618,11 @@ ko: &DEFAULT_KO
   comments_title             : "댓글"
   more_label                 : "더 보기"
   related_label              : "참고"
-  follow_label               : "팔로우:"
-  feed_label                 : "피드"
+  follow_label               : "Follow:"
+  feed_label                 : "Feed"
   powered_by                 : "Powered by"
-  website_label              : "웹사이트"
-  email_label                : "이메일"
+  website_label              : "Web"
+  email_label                : "E-mail"
   recent_posts               : "최근 포스트"
   undefined_wpm              : "Undefined parameter words_per_minute at _config.yml"
   comment_form_info          : "이메일은 공개되지 않습니다. 작성 필요 필드:"
@@ -637,9 +637,9 @@ ko: &DEFAULT_KO
   comment_error_msg          : "댓글 등록에 문제가 있습니다. 필요 필드를 작성했는지 확인하고 다시 시도하세요."
   loading_label              : "로딩중..."
   search_label_text          :
-  search_placeholder_text    : "검색어를 입력하세요..."
+  search_placeholder_text    : "무엇을 찾으시나요?"
   search_algolia_no_results  :
-  results_found              : "개 결과 발견"
+  results_found              : "개의 결과 발견"
   back_to_top                : "맨 위로 이동"
 ko-KR:
   <<: *DEFAULT_KO
