--- a/_config.yml
+++ b/_config.yml
@@ -16,16 +16,16 @@ minimal_mistakes_skin    : "dark" # "air", "aqua", "contrast", "dark", "dirt", "
 
 # Site Settings
 locale                   : "ko-KR"
-title                    : "Jaegool's NOTE"
+title                    : "DevNote"
 title_separator          : "|"
-subtitle                 : "Dreaming Attic" # site tagline that appears below site title in masthead
+subtitle                 :  # site tagline that appears below site title in masthead
 name                     : "Kim Jaewoo"
-description              : "개인 블로그입니다."
+description              : "개인 블로그 입니다"
 url                      : "https://jaeg00l.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : "jaeg00l/jaeg00l.github.io"
 teaser                   : /assets/images/teaser.png
-logo                     : /assets/images/logo.png 
+# logo                     : /assets/images/logo.png 
 masthead_title           : # overrides the website title displayed in the masthead, use " " for no title
 breadcrumbs              : true # true, false (default)
 words_per_minute         : 200
@@ -112,7 +112,7 @@ author:
   links:
     - label: "Email"
       icon: "fas fa-fw fa-envelope-square"
-      url: "mailto:jawo3335@gmail.com"
+      # url: "mailto:jawo3335@gmail.com"
     - label: "Website"
       icon: "fas fa-fw fa-link"
       # url: "https://your-website.com"
