--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -5,10 +5,10 @@ main:
 
   - title: "알고리즘"
     sublinks:
+      - title: "알고리즘"
+        url: /categories/#algorithm
       - title: "자료구조"
         url: /categories/#data-structure
-      - title: "이론"
-        url: /categories/#algorithm
       - title: "문제풀이"
         url: /categories/#boj
   - title: "프론트엔드"
