--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ locale                   : "ko-KR"
 title                    : "DevNote🟤"
 title_separator          : "|"
 subtitle                 :  # site tagline that appears below site title in masthead
-name                     : "Kim Jaewoo"
+name                     : "KJW"
 description              : "개인 블로그 입니다"
 url                      : "https://jaeg00l.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
@@ -104,7 +104,7 @@ analytics:
 
 # Site Author
 author:
-  name             : "Kim Jaewoo"
+  name             : "KJW"
   avatar           : "/assets/images/me3.png"
   bio              : "머지.. 합병.."
   location         : "South Korea"
@@ -127,7 +127,7 @@ author:
       url: "https://github.com/jaeg00l/"
     - label: "Instagram"
       icon: "fab fa-fw fa-instagram"
-      url: "https://instagram.com/_jaegool/"
+      # url: "https://instagram.com/_jaegool/"
 
 # Site Footer
 footer:
