--- a/_data/ui-text.yml
+++ b/_data/ui-text.yml
@@ -599,8 +599,8 @@ ko: &DEFAULT_KO
   skip_content               :
   skip_footer                :
   page                       : "페이지"
-  pagination_previous        : "이전 포스팅"
-  pagination_next            : "다음 포스팅"
+  pagination_previous        : "이전 페이지"
+  pagination_next            : "다음 페이지"
   breadcrumb_home_label      : "Home"
   breadcrumb_separator       : "/"
   menu_label                 : "토글 메뉴"
