--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -15,7 +15,8 @@ main:
     url: /categories/#c-c
   - title: "Python"
   - title: "JAVA"
-  - title: "Spring"
+  - title: "SpringBoot"
+    url: /categories/#springboot
     sublinks:
       # - title: "1"
       # - title: "2"
